Create people page (1st version)

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,12 +1,10 @@
 <div class="navbar">
-    <a class="col-sm" href="home">People</a>
+    <a class="col-sm" href="people">People</a>
     <a class="col-sm" href="home">Places</a>
     <a class="col-sm" href="home">Books</a>
     <a class="col-sm" href="home">Games</a>
     <a class="col-sm" href="home">Statistics</a>
     <a class="col-sm" href="home">About</a>
-  
-  
 
   </div>
   
