Adding basic cards gallery for peoples

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,10 +1,10 @@
 <div class="navbar">
     <a class="col-sm" href="people">People</a>
-    <a class="col-sm" href="home">Places</a>
-    <a class="col-sm" href="home">Books</a>
-    <a class="col-sm" href="home">Games</a>
-    <a class="col-sm" href="home">Statistics</a>
-    <a class="col-sm" href="home">About</a>
+    <a class="col-sm" href="people">Places</a>
+    <a class="col-sm" href="people">Books</a>
+    <a class="col-sm" href="people">Games</a>
+    <a class="col-sm" href="people">Statistics</a>
+    <a class="col-sm" href="people">About</a>
 
   </div>
   
