--- a/src/app/people/people.component.css
+++ b/src/app/people/people.component.css
@@ -16,3 +16,16 @@
     height: 100vh;
 }
 
+
+.float-container {
+    border: 3px solid #fff;
+    padding: 20px;
+}
+
+.float-child {
+    width: 50%;
+    float: left;
+    padding: 20px;
+    margin-right: 5px;
+    margin-top: 5px;
+} 
