--- a/src/app/people/people.component.html
+++ b/src/app/people/people.component.html
@@ -15,14 +15,27 @@
           </ul>
         
     </div>
-    
+
+    <div class="col-sm-8 float-container" style="margin-top: 10px;">
+
+      <div *ngFor="let person of people">
+
+        <div class="card float-child" style="width: 18rem;">
+          <img class="card-img-top" src="../../assets/images/profile.PNG" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">{{ person.name }}</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">More Details</a>
+          </div>
+        </div>
+
+      </div>
+
+    </div>
+
+
     <div class="col-sm-2 right-side-list">
-        <!-- <div class="input-group mb-3">
-            <input type="text" class="form-control" placeholder="Add name" aria-label="Recipient's username" aria-describedby="basic-addon2">
-            <div class="input-group-append">
-              <button class="btn btn-outline-secondary" type="button">Search</button>
-            </div>
-          </div> -->
+
           <h2>Recent Activities <span class="badge badge-secondary">New</span></h2>
         
         <ul class="nav flex-column" *ngFor="let new of activity">
@@ -32,6 +45,8 @@
           </ul>
         
     </div>
+
+
 
 </div>
 
