--- a/src/app/people/person/person.component.html
+++ b/src/app/people/person/person.component.html
@@ -13,16 +13,7 @@
 
     <div class="col-sm-8 float-container" style="margin-top: 10px;">
 
-        <h1>person works!</h1>
-        <h1>person works!</h1>
-        <h1>person works!</h1>
-        <h1>person works!</h1>
-        <h1>person works!</h1>
-        <h1>person works!</h1>
-        <h1>person works!</h1>
-        <h1>person works!</h1>
-        <h1>person works!</h1>
-        <h1>person works!</h1>
+      <p>Eli seni ..........</p>
 
     </div>
 
