Adding basic view and css for all new pages

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,10 +1,10 @@
 <div class="navbar">
     <a class="col-sm" href="people">People</a>
-    <a class="col-sm" href="people">Places</a>
-    <a class="col-sm" href="people">Books</a>
-    <a class="col-sm" href="people">Games</a>
-    <a class="col-sm" href="people">Statistics</a>
-    <a class="col-sm" href="people">About</a>
+    <a class="col-sm" href="places">Places</a>
+    <a class="col-sm" href="books">Books</a>
+    <a class="col-sm" href="games">Games</a>
+    <a class="col-sm" href="statistics">Statistics</a>
+    <a class="col-sm" href="about">About</a>
 
   </div>
   
