--- a/src/app/books/books.component.html
+++ b/src/app/books/books.component.html
@@ -1,1 +1,28 @@
-<p>books works!</p>
+<div class="main-area">
+
+    <div class="col-sm-2 left-side-list">
+        <div class="input-group mb-3">
+            <input type="text" class="form-control" placeholder="Add name" aria-label="Recipient's username" aria-describedby="basic-addon2">
+            <div class="input-group-append">
+              <button class="btn btn-outline-secondary" type="button">Search</button>
+            </div>
+          </div>
+        <app-assest-list></app-assest-list>
+    </div>
+
+    <div class="col-sm-8 float-container" style="margin-top: 10px;">
+
+    </div>
+
+
+    <div class="col-sm-2 right-side-list">
+
+      <app-activity-list></app-activity-list>
+        
+    </div>
+
+
+
+</div>
+
+
