--- a/src/app/people/people.component.html
+++ b/src/app/people/people.component.html
@@ -17,7 +17,7 @@
       <div *ngFor="let person of people">
 
         <div class="card float-child" style="width: 18rem;">
-          <img class="card-img-top" src="../../assets/images/profile.PNG" alt="Card image cap">
+          <img class="card-img-top" src="../../assets/images/profile.png" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">{{ person.name }}</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
